# ai-review

./: .gitignore  CHANGELOG.md  COMMIT_MSG.txt  README.md  STUDY.md  TECHNICAL.md  plan.md  pyproject.toml  test_json_extract.py
.ai-review/: .gitignore  config.yaml
.ai-review/example/: hardcoded-password.md  npe.md  sql-injection.md  xss.md
.ai-review/prompts/: diff_review.md  full_file_review.md  system_message.txt
.github/workflows/: publish.yml
docs/: README.md  article-promotion.md  model-config.md  post-juejin-richtext.md  post-juejin.md  post-v2ex.md  recording-script.md  seed-users-plan.md  technical.md  web-demo-roadmap.md
docs/demo/: index.html
src/commit_ai_guardian/: __init__.py  __main__.py  ai_engine.py  case_loader.py  case_validator.py  cases_updater.py  cli.py  config.py  diff_collector.py  file_collector.py  hook_installer.py  prompt_loader.py  result_formatter.py  utils.py
src/commit_ai_guardian/cases/: npe.yaml  sql-injection.yaml
src/commit_ai_guardian/templates/: pre-commit-hook-template
src/commit_ai_guardian/templates/case-examples/: hardcoded-password.yaml  mongoose-query-acceptable.md  npe.yaml  raw-sql-acceptable.md  redundant-null-union.md  resource-leak.md  resource-leak.yaml  sql-injection.yaml  thread-sleep.md  weak-hash.md  weak-hash.yaml  xss.yaml
src/commit_ai_guardian/templates/examples/js/: mongoose-query-acceptable.md  no-cross-service-crud.md  redundant-null-union.md  vue-default-slot-redundant.md  vxe-size-redundant.md
tests/: conftest.py  test_ai_engine.py  test_ai_engine_logs.py  test_case_loader.py  test_config.py  test_diff_collector.py  test_file_collector.py  test_hook_installer.py  test_json_fix_ai.py  test_prompt_loader.py  test_result_formatter.py  test_utils.py
