[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commit-ai-guardian"
version = "0.2.9"
description = "Git commit 前 AI 自动代码审查工具 — 支持 OpenAI/MiniMax/DeepSeek/Kimi，自定义审核规则和案例"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "tingkl"},
]
keywords = ["git", "hook", "pre-commit", "ai", "code-review", "code-quality", "llm", "openai", "deepseek", "minimax", "kimi", "static-analysis", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "gitpython>=3.1",
    "pyyaml>=6.0",
    "openai>=1.0",
]

[project.scripts]
commit-ai-guardian = "commit_ai_guardian.cli:main"
cag = "commit_ai_guardian.cli:main"

[project.urls]
Homepage = "https://github.com/tingkl/ai-review"
Documentation = "https://github.com/tingkl/ai-review/blob/main/README.md"
Repository = "https://github.com/tingkl/ai-review"
Issues = "https://github.com/tingkl/ai-review/issues"
Changelog = "https://github.com/tingkl/ai-review/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/commit_ai_guardian"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
